# nt-redaction

./: .gitignore  README.md  nuxt.config.js  package-lock.json  package.json
components/: NavBar.vue
components/footer/: Footer.vue  PageFooterComponent.vue  Pagefooter.vue
components/navigation/: NavBar.vue  NavElement.vue  NavLogo.vue
components/text/: TextArea.vue
jupyter-playground/: main.ipynb  poetry_setup.md  poetry_usage.md  pyproject.toml  ve.md
layouts/: default.vue
pages/: index.vue  redactioncalculator.vue
pages/gospel_parallels/: index.vue
pages/levenshtein_calculator/: index.vue
resources/: siteData.json  text.json
